[package]
name = "ramdis"
version = "0.1.0"
description = "Randomly decides for you"
edition = "2024"
include = ["/src"]

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
rand = "0.9.1"
tokio = { version = "1.40.0", features = ["full"] }
